[package]
name = "monie"
version = "0.1.0"
authors = ["Noah Levitt <nlevitt@archive.org>"]
edition = "2018"

[dependencies]
hyper = "0.12"
hyper-rustls = "0.15"
http = "0.1"
lazy_static = "1.2"
rustls = "0.14"
lru-cache = "0.1"
tokio-rustls = "0.8"
openssl = "0.10"
bytes = "0.4"
futures = "0.1"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.3"

[patch.crates-io]
"hyper" = { git = "https://github.com/sverch/hyper", branch = "0.12.35-pubpool" }

